Added collections queries and requests
